<resources>
    <string name="app_name">RestaVid</string>
    <string name="Titulo">RestaVid</string>
    <string name="icono">Icono de la aplicación</string>

    // --- Pantalla principal:
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="Registro">Registrarse</string>
    <string name="PideYa">¡Pide Ya!</string>


    // ----- Pantalla principal Admin
    <string name="AñadirReserva">Añadir Reservas</string>
    <string name="EliminarReserva">Eliminar Reservas</string>
    <string name="EliminarUsuarios">Eliminar Usuarios</string>
    <string name="AñadirUsuarios">Añadir Usuarios</string>
    <string name="ModData">Modificar Restricciones</string>


    // --- Pantalla principal Usuario
    <string name="Reservar">Reservar</string>
    <string name="AnularReserva">Anular Reserva</string>
    <string name="VerRservas">Mis reservas</string>

    //Admin Mod Data
    <string name="Admin_Mod_numero_personas">Numero número de personas: </string>
    <string name="Admin_Mod_hora_reserva">Nueva hora límite de reserva: </string>
    <string name="Admin_Mod_Cerrados">¿Marcar restaurante como cerrado?</string>

    <string name="cerrar_restaurante">Restaurante cerrado</string>

    //Admin delete reserva
    <string name="btnBuscar">Buscar</string>
    <string name="tablaNombre">Nombre</string>
    <string name="tablaHora">Hora</string>
    <string name="tablaFecha">Fecha</string>
    <string name="tablaTelefono">Teléfono</string>
    <string name="btnEliminarSeleccionado">Eliminar Seleccionado</string>

    //Admin add User
    <string name="admin_addUser">Usuario creado</string>


    // --- Sub-Pantalla Usuario:
    <string name="registroUsuario">Registro: </string>
    <string name="reservaUsuario">Reserva: </string>


    <string name="nombre">Nombre</string>
    <string name="nombreUsuario">Nombre de usuario (correo electrónico)</string>
    <string name="apellidos">Apellidos</string>
    <string name="apellidosUsuario">Apellidos de usuario</string>


    <string name="hintEmail">correo electrónico</string>
    <string name="telefono">Teléfono de contacto</string>
    <string name="hintPhone">+34</string>
    <string name="hintContraseña">Contraseña</string>

    <string name="numero_personas">Número de personas: </string>
    <string name="hora_reserva">Hora de la reserva: </string>
    <string name="FechaCalendario">Reserva: </string>
    <string name="minDateCalendar">01/11/2020</string>

    <string name="contrasenaAdmin">Contraseña Admin: </string>

    <string name="btnAceptar">Aceptar</string>

    // --- Pantalla final
    <string name="Gracias">Su pedido ha sido realizado</string>


    // ---- Mensajes por pantalla de errores y aciertos
        //Iniciar Sesión
        <string name="error_usuario_contra">Email o contraseña incorrectos</string>

        //Iniciar Sesión
        <string name="error_registro">Campos incompletos</string>

        //Admin add user
        <string name="ok_admin_addUser">Usuario creado correctamente</string>
        <string name="error_admin_addUser">Error al intentar crear el usuario, rellene todos los campos</string>


        //Admin delete user
        <string name="error_delete_user">No se ha podido eliminar el usuario. </string>
        <string name="ok_delete_user">Usuario eliminado correctamente. </string>

        //Admin Add Reserva
        <string name="error_admin_addReserva">Error al intentar crear la reserva, rellene todos los campos</string>
        <string name="ok_admin_addReserva">Añadida la reserva</string>
        <string name="error_fecha_admin_addReserva">Solo se puede reservar a partir de mañana</string>

        //Admin Delete Reserva
        <string name="ok_admin_deleteReserva"> Reserva eliminada </string>
        <string name="error_admin_deleteReserva"> Seleccione reserva a eliminar </string>

        // Reserva
        <string name="error_reserva"> Rellene los campos de reserva </string>
</resources>