<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityLayaut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.admin.MainActivityAdmin">


    <Button
        android:id="@+id/btnEliminarUsuarios"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/EliminarUsuarios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarReservas"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAñadirReservas"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginStart="40dp"
        android:text="@string/AñadirReserva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/btnEliminarReservas"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginEnd="28dp"
        android:text="@string/EliminarReserva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/btnAñadirUsuarios"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/AñadirUsuarios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAñadirReservas"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnModData"
        android:layout_width="316dp"
        android:layout_height="103dp"
        android:layout_marginStart="30dp"
        android:text="@string/ModData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAñadirUsuarios"
        app:layout_constraintVertical_bias="0.085" />

</androidx.constraintlayout.widget.ConstraintLayout>