<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.HUMMMM.yopido.pantallas.MainRegistro">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loging"
            android:layout_width="104dp"
            android:layout_height="35dp"
            android:text="@string/registroUsuario"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.163" />

        <TextView
            android:id="@+id/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextCorreo"
            android:text="@string/nombreUsuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loging"
            app:layout_constraintVertical_bias="0.255" />

        <EditText
            android:id="@+id/editTextCorreo"
            tools:ignore="LabelFor"
            android:layout_width="356dp"
            android:layout_height="49dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correo"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="99dp"
            android:labelFor="@id/editTextTextPassword"
            android:text="@string/hintContraseña"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCorreo"
            app:layout_constraintVertical_bias="0.119" />

        <EditText
            android:id="@+id/editTextTextPassword"
            tools:ignore="LabelFor"
            android:layout_width="356dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/hintContraseña"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.381"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraseña"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            app:layout_constraintBottom_toTopOf="@+id/correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loging"
            app:layout_constraintVertical_bias="0.296" />

        <EditText
            android:id="@+id/editTextTextNombre"
            android:autofillHints="@+id/editTextTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre"
            app:layout_constraintVertical_bias="0.368" />


        <TextView
            android:id="@+id/apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos"
            app:layout_constraintBottom_toTopOf="@+id/correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loging"
            app:layout_constraintVertical_bias="0.296" />

        <EditText
            android:id="@+id/editTextTextApellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@+id/editTextTextNombre"
            android:ems="10"
            android:hint="@string/apellidosUsuario"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre"
            app:layout_constraintVertical_bias="0.368" />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCorreo"
            app:layout_constraintVertical_bias="0.053" />

        <EditText
            android:id="@+id/editTextPhone"
            android:autofillHints="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/hintPhone"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefono"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/buttonRegistroAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btnAceptar" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>