<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.HUMMMM.yopido.pantallas.loguedUser.MainMenuLogueado">

    <Button
        android:id="@+id/btnAnularReserva"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="310dp"
        android:layout_height="107dp"
        android:layout_marginTop="36dp"
        android:text="@string/AnularReserva"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReservar" />

    <Button
        android:id="@+id/btnVerReservas"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="310dp"
        android:layout_height="107dp"
        android:layout_marginTop="68dp"
        android:text="@string/VerRservas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReservar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="310dp"
        android:layout_height="107dp"
        android:layout_marginTop="44dp"
        android:text="@string/Reservar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerReservas" />

</androidx.constraintlayout.widget.ConstraintLayout>