<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.admin.MainAdminModData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/numero_personas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_Mod_numero_personas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.037" />

            <Spinner
                android:id="@+id/spPersonas_Mod_Data"
                android:layout_width="77dp"
                android:layout_height="40dp"
                android:entries="@array/numPersonas"
                app:layout_constraintBottom_toTopOf="@+id/calendarReserva"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toEndOf="@+id/numPersonas"
                app:layout_constraintVertical_bias="0.444" />


            <TextView
                android:id="@+id/horaReserva"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:text="@string/Admin_Mod_hora_reserva"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.037" />

            <Spinner
                android:id="@+id/spHora_Mod_Data"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:entries="@array/horasReserva"
                app:layout_constraintBottom_toTopOf="@+id/calendarReserva"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toEndOf="@+id/numero_personas"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
                app:layout_constraintVertical_bias="0.444" />


            <CheckBox
                android:id="@+id/checkBox_cerrados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Admin_Mod_Cerrados" />

            <Button
                android:id="@+id/buttonAceptar_ModData_Admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btnAceptar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>